# text-classifier

./: README.md  pyproject.toml  text_classification.ipynb
